--- a/website/incidents.html
+++ b/website/incidents.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -10,12 +9,13 @@
     <title>#Interns2017</title>
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- My css below -->
-    <link href="css/incidents.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
     <link href="css/print_report.css" rel="stylesheet" media="print">
 </head>
 
 <body>
 <script src="js/incidents.js"></script>
+
 
 <!-- top page navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="nav_bar">
@@ -37,6 +37,7 @@
         </div>
     </div>
 </nav>
+
 
 <!-- container for rest of main-->
 <div class="container-fluid" id="main_container">
@@ -124,16 +125,12 @@
     </div>
 </div>
 
+
 <!-- Bootstrap scripts -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-        integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="bootstrap/assets/js/vendor/popper.min.js"></script>
+<script src="bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- End of bootstrap scripts -->
 
 </body>
