--- a/website/incidents.html
+++ b/website/incidents.html
@@ -9,13 +9,12 @@
     <title>#Interns2017</title>
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- My css below -->
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/incidents.css" rel="stylesheet">
     <link href="css/print_report.css" rel="stylesheet" media="print">
 </head>
 
 <body>
 <script src="js/incidents.js"></script>
-
 
 <!-- top page navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="nav_bar">
@@ -37,7 +36,6 @@
         </div>
     </div>
 </nav>
-
 
 <!-- container for rest of main-->
 <div class="container-fluid" id="main_container">
@@ -124,7 +122,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- Bootstrap scripts -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
