--- a/website/incidents.html
+++ b/website/incidents.html
@@ -13,7 +13,7 @@
     <link href="css/print_report.css" rel="stylesheet" media="print">
 </head>
 
-<body>
+<body class="bg-light">
 <script src="js/incidents.js"></script>
 
 <!-- top page navbar -->
