--- a/website/incidents.html
+++ b/website/incidents.html
@@ -16,6 +16,8 @@
 <body class="bg-light">
 <script src="js/incidents.js"></script>
 
+
+
 <!-- top page navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="nav_bar">
 
@@ -117,11 +119,15 @@
 
                 </div>
 
+                <p id="name">test</p>
 
             </div>
         </div>
     </div>
 </div>
+
+<script src="PHP/retrieve_Incidents.php"></script>
+
 
 <!-- Bootstrap scripts -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
