--- a/website/incidents.html
+++ b/website/incidents.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bg-light">
-<script src="js/incidents.js"></script>
+
 
 
 
@@ -119,7 +119,7 @@
 
                 </div>
 
-                <p id="name">test</p>
+                <p id="test_output">test</p>
 
             </div>
         </div>
@@ -127,7 +127,7 @@
 </div>
 
 
-
+<script src="js/incidents.js"></script>
 <!-- Bootstrap scripts -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
