load table dynamically

--- a/website/incidents.html
+++ b/website/incidents.html
@@ -92,7 +92,11 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <th scope="row">Date/Time incident:</th>
+                        <th scope="row">Date of Incident:</th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Time of Incident:</th>
                         <td></td>
                     </tr>
                     <tr>
@@ -100,11 +104,11 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <th scope="row">Date/Time resolved:</th>
+                        <th scope="row">Date Resolved:</th>
                         <td></td>
                     </tr>
                     <tr>
-                        <th scope="row">Temperature:</th>
+                        <th scope="row">Time Resolved:</th>
                         <td></td>
                     </tr>
                     </tbody>
@@ -118,8 +122,6 @@
 
 
                 </div>
-
-                <p id="test_output">test</p>
 
             </div>
         </div>
