--- a/website/incidents.html
+++ b/website/incidents.html
@@ -75,7 +75,7 @@
                     <thead class="thead-light">
                     <tr>
                         <th scope="col">Incident:</th>
-                        <th scope="col">#00001</th>
+                        <th scope="col"></th>
 
                     </tr>
                     </thead>
