--- a/website/index.html
+++ b/website/index.html
@@ -165,6 +165,10 @@
     <p id="test_output">TEST</p>
 </div>
 
+<button type="button" class="btn btn-primary" id="test-retrieve" onclick="retrieveReport()">test</button>
+
+
+
 
 <!-- Bootstrap scripts -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
