fix id issues with menu creation

--- a/website/index.html
+++ b/website/index.html
@@ -137,13 +137,12 @@
                 <div class="dropdown" id="sensor_select_btn">
 
                     <!-- dropdown for sensors -->
-                    <button class="btn-sm btn-outline-primary dropdown-toggle" type="button" id="sensor_report_select"
+                    <button class="btn-sm btn-outline-primary dropdown-toggle" type="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Drinks Fridge
+                        Sensors
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Ambient Temperature</a>
-                        <a class="dropdown-item" href="#">Food Fridge</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="sensor_list_dropdown">
+
                     </div>
                 </div>
 
