formatted the front end code

--- a/website/incidents.html
+++ b/website/incidents.html
@@ -15,20 +15,17 @@
 
 <body class="bg-light">
 
-
-
-
 <!-- top page navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="nav_bar">
 
-    <a class="navbar-brand" href="#">Insert Name Here</a>
+    <a class="navbar-brand" href="#">TempSpace</a>
 
     <ul class="navbar-nav mr-auto">
     </ul>
     <div class="dropdown">
         <button class="btn btn-outline-light btn-sm dropdown-toggle" type="button" id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            user@insnmhere.com.au
+            user@tempspace.com.au
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Account Settings</a>
@@ -57,7 +54,7 @@
 
             </ul>
 
-            <!-- list of reports/incidents-->
+            <!-- list of report_id_list/incidents-->
             <div class="list-group" id="reports_menu">
             </div>
 
