--- a/website/index.html
+++ b/website/index.html
@@ -14,20 +14,19 @@
 </head>
 
 <body class="bg-light">
-<script src="js/index.js"></script>
 
 
 <!-- top page navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="nav_bar">
 
-    <a class="navbar-brand" href="#">Insert Name Here</a>
+    <a class="navbar-brand" href="#">TempSpace</a>
 
     <ul class="navbar-nav mr-auto">
     </ul>
     <div class="dropdown">
         <button class="btn btn-outline-light btn-sm dropdown-toggle" type="button" id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            user@insnmhere.com.au
+            user@tempspace.com.au
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Account Settings</a>
@@ -58,7 +57,7 @@
 
             </ul>
 
-            <!-- list of reports/incidents-->
+            <!-- list of report_id_list/incidents-->
             <div class="list-group" id="reports_menu">
             </div>
 
@@ -165,10 +164,7 @@
 </div>
 
 
-
-
-
-
+<script src="js/index.js"></script>
 <!-- Bootstrap scripts -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
