--- a/website/incidents.html
+++ b/website/incidents.html
@@ -21,6 +21,12 @@
     <a class="navbar-brand" href="#">TempSpace</a>
 
     <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Reports<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="incidents.html">Incidents</a>
+        </li>
     </ul>
     <div class="dropdown">
         <button class="btn btn-outline-light btn-sm dropdown-toggle" type="button" id="dropdownMenuButton"
