changed colors to sass files

--- a/website/incidents.html
+++ b/website/incidents.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="https://safetyculture.com/assets/images/twitter/twitter_mark.png">
+    <link rel="icon" href="icons/twitter_mark.png">
     <title>#Interns2017</title>
-    <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- My css below -->
     <link href="css/incidents.css" rel="stylesheet">
     <link href="css/print_report.css" rel="stylesheet" media="print">
@@ -21,7 +21,7 @@
     <a class="navbar-brand" href="#">TempSpace</a>
 
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <li class="nav-item ">
             <a class="nav-link" href="index.html">Reports<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
