--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="https://safetyculture.com/assets/images/twitter/twitter_mark.png">
     <title>#Interns2017</title>
-    <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- My css below -->
     <link href="css/index.css" rel="stylesheet">
     <link href="css/print_report.css" rel="stylesheet" media="print">
