--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="https://safetyculture.com/assets/images/twitter/twitter_mark.png">
+    <link rel="icon" href="icons/twitter_mark.png">
     <title>#Interns2017</title>
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- My css below -->
