--- a/website/index.html
+++ b/website/index.html
@@ -56,10 +56,10 @@
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-sm" role="document">
-                    <div class="modal-content">
+                <div class="modal-dialog modal-sm " role="document">
+                    <div class="modal-content bg-light">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Search Dates</h5>
+                            <h6 class="modal-title text-primary" id="exampleModalLabel">Search Dates</h6>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-outline-primary" data-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-sm btn-primary">Search</button>
+                            <button type="button" onclick="on_search_dates_click()" class="btn btn-sm btn-primary">Search</button>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,6 @@
         </div>
     </div>
 
-</div>
 
 
 <script src="js/index.js"></script>
