--- a/website/index.html
+++ b/website/index.html
@@ -80,8 +80,11 @@
 
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-sm btn-outline-primary" data-dismiss="modal">Cancel</button>
-                            <button type="button" onclick="on_search_dates_click()" class="btn btn-sm btn-primary">Search</button>
+
+                            <button type="button" onclick="on_reset_serch_dates_click()" data-dismiss="modal" class="btn btn-sm btn-primary">Reset</button>
+
+                            <button type="button" onclick="on_search_dates_click()" data-dismiss="modal" class="btn btn-sm btn-primary">Search</button>
+
                         </div>
                     </div>
                 </div>
