--- a/website/index.html
+++ b/website/index.html
@@ -66,15 +66,44 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                                <div class="input-group input-group-sm" id="date_search_month_box">
-                                <span class="input-group-addon">Month:</span>
-                                <input type="text" class="form-control" id="date_search_month" aria-describedby="basic-addon3">
-                                </div>
-                                    <div class="input-group input-group-sm" id="date_search_year_box">
-                                <span class="input-group-addon">Year:&nbsp&nbsp&nbsp</span>
-                                <input type="text" class="form-control" id="date_search_year" aria-describedby="basic-addon3">
+
+                            <div class="form-group">
+                                <select class="form-control form-control-sm" id="exampleFormControlSelect1">
+                                    <option>Exactly</option>
+                                    <option>After</option>
+                                    <option>Before</option>
+                                </select>
                             </div>
 
+                            <div class="form-group">
+                                <select class="form-control form-control-sm" id="exampleFormControlSelect1">
+                                    <option>Jan</option>
+                                    <option>Feb</option>
+                                    <option>Mar</option>
+                                    <option>Apr</option>
+                                    <option>May</option>
+                                    <option>Jun</option>
+                                    <option>Jul</option>
+                                    <option>Aug</option>
+                                    <option>Sep</option>
+                                    <option>Oct</option>
+                                    <option>Nov</option>
+                                    <option>Dec</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <select class="form-control form-control-sm" id="exampleFormControlSelect1">
+                                    <option>2017</option>
+                                    <option>2016</option>
+                                    <option>2015</option>
+                                    <option>2014</option>
+                                    <option>2013</option>
+                                    <option>2012</option>
+                                    <option>2011</option>
+                                    <option>2010</option>
+                                </select>
+                            </div>
 
 
 
