--- a/website/index.html
+++ b/website/index.html
@@ -68,7 +68,7 @@
                         <div class="modal-body">
 
                             <div class="form-group">
-                                <select class="form-control form-control-sm" id="exampleFormControlSelect1">
+                                <select class="form-control form-control-sm" id="date_search_param">
                                     <option>Exactly</option>
                                     <option>After</option>
                                     <option>Before</option>
@@ -76,7 +76,7 @@
                             </div>
 
                             <div class="form-group">
-                                <select class="form-control form-control-sm" id="exampleFormControlSelect1">
+                                <select class="form-control form-control-sm" id="date_search_month">
                                     <option>Jan</option>
                                     <option>Feb</option>
                                     <option>Mar</option>
@@ -89,11 +89,12 @@
                                     <option>Oct</option>
                                     <option>Nov</option>
                                     <option>Dec</option>
+                                    <option>Any</option>
                                 </select>
                             </div>
 
                             <div class="form-group">
-                                <select class="form-control form-control-sm" id="exampleFormControlSelect1">
+                                <select class="form-control form-control-sm" id="date_search_year">
                                     <option>2017</option>
                                     <option>2016</option>
                                     <option>2015</option>
@@ -102,6 +103,7 @@
                                     <option>2012</option>
                                     <option>2011</option>
                                     <option>2010</option>
+                                    <option>Any</option>
                                 </select>
                             </div>
 
