--- a/website/incidents.html
+++ b/website/incidents.html
@@ -65,18 +65,7 @@
                         <div class="modal-body">
 
 
-                            <div class="input-group input-group-sm" id="date_search_day_box">
-                                <span class="input-group-addon">Day:&nbsp&nbsp&nbsp&nbsp</span>
-                                <input type="text" class="form-control" id="date_search_day" aria-describedby="basic-addon3">
-                            </div>
-                            <div class="input-group input-group-sm" id="date_search_month_box">
-                                <span class="input-group-addon">Month:</span>
-                                <input type="text" class="form-control" id="date_search_month" aria-describedby="basic-addon3">
-                            </div>
-                            <div class="input-group input-group-sm" id="date_search_year_box">
-                                <span class="input-group-addon">Year:&nbsp&nbsp&nbsp</span>
-                                <input type="text" class="form-control" id="date_search_year" aria-describedby="basic-addon3">
-                            </div>
+                            <p class="text-primary">coming soon...</p>
 
 
 
