added new pages and move created html folder

--- a/website/html/incidents.html
+++ b/website/html/incidents.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="icons/twitter_mark.png">
+    <link rel="icon" href="../icons/twitter_mark.png">
     <title>#Interns2017</title>
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- My css below -->
-    <link href="css/incidents.css" rel="stylesheet">
-    <link href="css/print_report.css" rel="stylesheet" media="print">
+    <link href="../css/incidents.css" rel="stylesheet">
+    <link href="../css/print_report.css" rel="stylesheet" media="print">
 </head>
 
 <body class="bg-light">
@@ -22,7 +22,7 @@
 
     <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-            <a class="nav-link" href="index.html">Reports<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="reports.html">Reports<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
             <a class="nav-link" href="incidents.html">Incidents</a>
@@ -31,13 +31,13 @@
     <div class="dropdown">
         <button class="btn btn-outline-light btn-sm dropdown-toggle" type="button" id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            user@tempspace.com.au
+            user@TempSpace.com
         </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Account Settings</a>
-            <a class="dropdown-item" href="#">User Settings</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Log out</a>
+        <div class="dropdown-menu bg-light " aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item text-primary" href="user_settings.html">User Settings</a>
+            <a class="dropdown-item text-primary" href="account_settings.html">Account Settings</a>
+            <div class="dropdown-divider bg-primary"></div>
+            <a class="dropdown-item text-primary" href="../index.html">Log out</a>
         </div>
     </div>
 </nav>
@@ -100,12 +100,12 @@
 </div>
 
 
-<script src="js/incidents.js"></script>
+<script src="../js/incidents.js"></script>
 <!-- Bootstrap scripts -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="bootstrap/assets/js/vendor/popper.min.js"></script>
-<script src="bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../bootstrap/assets/js/vendor/popper.min.js"></script>
+<script src="../bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- End of bootstrap scripts -->
 
 </body>
