change report tables menus

--- a/website/html/reports.html
+++ b/website/html/reports.html
@@ -52,7 +52,7 @@
         <!-- left side of page-->
         <div class="col-3" id="col4">
 
-            <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-sm btn-block btn-outline-primary" id="search_reports">Search Dates</button>
+            <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-block btn-primary" id="search_reports">Search</button>
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -125,18 +125,14 @@
 
 
             <!-- list of report_id_list/incidents-->
-            <div class="list-group" id="reports_menu">
-
-
-
-
+            <div class="list-group-flush bg-primary" id="reports_menu">
             </div>
 
         </div>
 
 
         <!-- right side of page-->
-        <div class="col-9" id="col8">
+        <div class="col" id="col8">
 
             <div id="data_table">
                 </div>
