--- a/website/html/incidents.html
+++ b/website/html/incidents.html
@@ -50,7 +50,7 @@
         <div class="col-3" id="col4">
 
 
-            <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-sm btn-block btn-outline-primary" id="search_reports">Search Dates</button>
+            <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-sm btn-block btn-primary" id="search_reports">Search Dates</button>
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -82,7 +82,7 @@
 
 
             <!-- list of report_id_list/incidents-->
-            <div class="list-group" id="reports_menu">
+            <div class="list-group-flush" id="reports_menu">
             </div>
 
         </div>
