--- a/website/html/reports.html
+++ b/website/html/reports.html
@@ -13,7 +13,7 @@
     <link href="../css/print_report.css" rel="stylesheet" media="print">
 </head>
 
-<body class="bg-light">
+<body class="bg-white">
 
 
 <!-- top page navbar -->
@@ -52,7 +52,7 @@
         <!-- left side of page-->
         <div class="col-3" id="col4">
 
-            <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-block btn-primary" id="search_reports">Search</button>
+            <!--<button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-sm btn-block btn-primary" id="search_reports">Search</button>-->
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -125,7 +125,7 @@
 
 
             <!-- list of report_id_list/incidents-->
-            <div class="list-group-flush bg-primary" id="reports_menu">
+            <div class="list-group bg-light " id="reports_menu">
             </div>
 
         </div>
