--- a/website/html/reports.html
+++ b/website/html/reports.html
@@ -125,7 +125,7 @@
 
 
             <!-- list of report_id_list/incidents-->
-            <div class="list-group bg-light " id="reports_menu">
+            <div class="list-group-flush bg-light " id="reports_menu">
             </div>
 
         </div>
