--- a/website/html/reports.html
+++ b/website/html/reports.html
@@ -13,7 +13,7 @@
     <link href="../css/print_report.css" rel="stylesheet" media="print">
 </head>
 
-<body class="bg-white">
+<body class="bg-light">
 
 
 <!-- top page navbar -->
@@ -50,7 +50,7 @@
 
 
         <!-- left side of page-->
-        <div class="col-3" id="col4">
+        <div class="col-2" id="col4">
 
             <!--<button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-sm btn-block btn-primary" id="search_reports">Search</button>-->
 
@@ -125,7 +125,10 @@
 
 
             <!-- list of report_id_list/incidents-->
-            <div class="list-group-flush bg-light " id="reports_menu">
+            <div class="list-group-flush bg-primary " id="reports_menu">
+
+
+
             </div>
 
         </div>
