--- a/website/html/incidents.html
+++ b/website/html/incidents.html
@@ -47,10 +47,8 @@
     <div class="row">
 
         <!-- left side of page-->
-        <div class="col-3" id="col4">
+        <div class="col-2" id="col4">
 
-
-            <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-sm btn-block btn-primary" id="search_reports">Search Dates</button>
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -82,13 +80,13 @@
 
 
             <!-- list of report_id_list/incidents-->
-            <div class="list-group-flush" id="reports_menu">
+            <div class="list-group-flush bg-primary" id="reports_menu">
             </div>
 
         </div>
 
         <!-- right side of page-->
-        <div class="col-9" id="col8">
+        <div class="col" id="col8">
 
 
             <div id="data_table">
