updated reports menu

--- a/website/html/reports.html
+++ b/website/html/reports.html
@@ -50,8 +50,7 @@
 
 
         <!-- left side of page-->
-        <div class="col-2" id="col4">
-
+        <div class="col-2 bg-primary" id="col4">
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -110,9 +109,15 @@
 
 
             <!-- list of report_id_list/incidents-->
-            <div class="list-group-flush bg-primary " id="reports_menu">
+            <div class="list-group-flush" id="reports_menu">
+            </div>
+
+            <div id="reports_menu_buttons">
+            <button type="button" class="btn btn-outline-light btn-sm btn-block">Search</button>
+            <button type="button" class="btn btn-outline-light btn-sm btn-block">Print</button>
             </div>
         </div>
+
 
         <!-- right side of page-->
         <div class="col" id="col8">
