--- a/website/html/reports.html
+++ b/website/html/reports.html
@@ -15,8 +15,6 @@
 
 <body class="bg-light">
 
-
-<!-- top page navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="nav_bar">
 
     <a class="navbar-brand" href="#">TempSpace</a>
@@ -46,6 +44,8 @@
 
 <!-- container for rest of main-->
 <div class="container-fluid" id="main_container">
+
+
     <div class="row">
 
 
@@ -113,8 +113,8 @@
             </div>
 
             <div id="reports_menu_buttons">
-            <button type="button" class="btn btn-outline-light btn-sm btn-block">Search</button>
-            <button type="button" class="btn btn-outline-light btn-sm btn-block">Print</button>
+                <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-light btn-sm btn-block" id="search_reports">Search</button>
+                <button type="button" class="btn btn-outline-light btn-sm btn-block" onclick="window.print()">Print</button>
             </div>
         </div>
 
